--- a/package.json
+++ b/package.json
@@ -13,8 +13,21 @@
     "@astrojs/react": "^4.0.0",
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1",
+    "fastify": "^5.1.0",
+    "mysql2": "^3.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.13"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0 || >=20.0.0 || >=21.0.0"
   }
 }
