--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.0.0",
     "@astrojs/react": "^4.0.0",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/vercel": "^8.0.0",
